fixed white space in about section over 960px viewport

--- a/style.css
+++ b/style.css
@@ -119,8 +119,8 @@ nav > span > a {
 }
 
 .about-section-container > p {
-  font-size: clamp(1.5rem, 2.5vw, 2.8rem);
-  line-height: clamp(1.4rem, 3vw, 4rem);
+  font-size: clamp(1.5rem, 2.5vw, 3rem);
+  line-height: clamp(1.4rem, 3vw, 4.5rem);
   padding-top: clamp(1rem, 2vw, 3rem);
 }
 
@@ -175,6 +175,18 @@ footer > p {
 }
 
 /* MEDIA QUERIES */
+
+@media screen and (min-width: 960px) {
+
+  .about-section-container.left {
+    width: 75%;
+  }
+
+  .about-section-container.left > p {
+    margin: 0 15px 0 35px;
+    padding: 30px 15px 0 15px;
+  }
+}
 
 @media screen and (max-width: 870px) {
   .contact-section > p {
